
add_subdirectory(main)
add_subdirectory(laser)
add_subdirectory(network)
add_subdirectory(slam)
add_subdirectory(navigation)
add_subdirectory(posefilter)
add_subdirectory(timer)
add_subdirectory(station_recognition)
#add_subdirectory(srosbag)
add_subdirectory(action_controller)
add_subdirectory(extension_action_controller)
add_subdirectory(vsc)
add_subdirectory(spu)
add_subdirectory(usart)
add_subdirectory(location)
add_subdirectory(msg_record)
add_subdirectory(device)
add_subdirectory(hmi)
add_subdirectory(monitor)
add_subdirectory(touch_screen)
add_subdirectory(huawei_communication)
add_subdirectory(modbus)
add_subdirectory(communication)
add_subdirectory(mission)
add_subdirectory(obstacle)
add_subdirectory(upgrade)
add_subdirectory(pipe)
add_subdirectory(registers)
add_subdirectory(rack_query)
add_subdirectory(perception)
# add_subdirectory(imu)
add_subdirectory(imu2)
add_subdirectory(security)
add_subdirectory(schedule)
add_subdirectory(feature_extractor)

set(MODULE_SRC
        module-main
        module-laser
        module-timer
        module-navigation
        module-network
        module-slam
        module-posemanager
        module-station_recognition
        module-action_controller
        module-extension_action_controller
        module-vsc
        module-spu
        module-usart
        module-location
        module-record_msg
        module-device
        module-monitor
        module-hmi
        module-screen
        module-huawei_communication
        module-modbus
        module-communication
        module-mission
        module-obstacle
        module-rackquery
        module-upgrade
        module-pipe
        module-perception_manager
        module-registers
        module-rackquery
        module-security
        module-schedule
        module-feature_extractor
	module-livox_midxx
        # module-imu
        module-imu2
        )

IF(ENABLE_VISION)
    add_subdirectory(camera)
    add_subdirectory(vision)
    set(MODULE_SRC
            ${MODULE_SRC}
            module-camera
            module-vision
            )
ENDIF()

if(ENABLE_SROSBAG)
    add_subdirectory(srosbag)
    set(MODULE_SRC
            ${MODULE_SRC}
            module-bag
            )
endif()

sr_combined_library(sros-modules
        SRCS
        ${MODULE_SRC}
        )
